--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <h2>小見出し2</h2>
                         <img class="right" src="images/scale.jpg" alt="天秤" />
                         <p>
-                            コンテンツ2の本文になります。コンテンツ2の本文になります。コンテンツ2の本文になります。コンテンツ2の本文になります。
+                            コンテンツ2の本文になります。コンテンツ?の本文になります。コンテンツ2の本文になります。コンテンツ2の本文になります。
                             コンテンツ2の本文になります。コンテンツ2の本文になります。コンテンツ2の本文になります。コンテンツ2の本文になります。
                         </p>
                     </div>
